# Library-Application

./: README.md
LibraryApplication/: CMakeLists.txt  LibraryItem.cpp  LibraryItem.h  LibrarySystem.cpp  LibrarySystem.h  LibraryUtils.cpp  LibraryUtils.h  Library_Data.txt  MainWindow.cpp  MainWindow.h  Storage.h  book.cpp  book.h  magazine.cpp  magazine.h  main.cpp
LibraryApplication_Assignment1/: LibraryApplication_Assignment1.pro  Library_Data.txt  READ_ME.txt  book.cpp  book.h  libraryitem.cpp  libraryitem.h  librarysystem.cpp  librarysystem.h  magazine.cpp  magazine.h  main.cpp
